--- a/index.html
+++ b/index.html
@@ -79,12 +79,21 @@
         <a href="#">Learn More</a>
     </div>
 
+    <div class="game">
+        <h3>/h3>
+        <p><strong>Genre:</strong> </p>
+        <p><strong>Description:</strong> </p>
+        <p><strong>Platforms:</strong> </p>
+        <img src="game3_image.jpg" alt="Game Title 3">
+        <a href="#">Learn More</a>
+    </div>
+
     <!-- Add more game sections as needed -->
 
 </section>
 
 <footer>
-    <p>Contact Us: []</p>
+    <p>Contact Us: [contact email/phone number]</p>
 </footer>
 
 </body>
