--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p><strong>Description:</strong> Defend your base against waves of enemies in this classic tower defense game. Build towers, upgrade them, and strategically place them to fend off the onslaught.</p>
         <p><strong>Platforms:</strong> PC, Mobile</p>
         <img src="tower_defense_image.jpg" alt="Tower Defense">
-        <a href="#">Learn More</a>
+        <a href="#">Learn More at https://jadyennbt.github.io/tower-defense-main/</a>
     </div>
 
     <div class="game">
